tdf#157115 crash on inserting chart (gtk3)

regression from
    commit bdf2d664784b3ebe3e7078b9ec82a02d09d9ded8
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Sat Sep 2 10:44:51 2023 +0200
    use more concrete type in AccessibleChartView

Change-Id: I5f76f10404d6a202b1653f5e7cabc665b5962557
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156615
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>